--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,85 +1,1 @@
-<div id="clientInfo">
-  <strong>Client ID:</strong> <span>{{ clientId || "Connecting..." }}</span>
-</div>
-
-@if (showControlPanel) {
-<div class="control-panel">
-  <h3>Auto Operation Sender</h3>
-  <div class="control-panel__buttons">
-    <input
-      type="number"
-      [(ngModel)]="interval"
-      min="100"
-      placeholder="Interval (ms)"
-    />
-    <button
-      class="custom-button"
-      (click)="startAutoSend()"
-      [disabled]="isAutoSending()"
-    >
-      Start Auto Send
-    </button>
-    <button
-      class="custom-button"
-      (click)="stopAutoSend()"
-      [disabled]="!isAutoSending()"
-    >
-      Stop Auto Send
-    </button>
-    <button class="custom-button" (click)="showOperations = !showOperations">
-      {{ showOperations ? "Hide" : "Show" }} Operations Panel
-    </button>
-  </div>
-
-  <div class="notification-control">
-    <input
-      type="checkbox"
-      id="notificationsToggle"
-      [(ngModel)]="notificationsEnabled"
-    />
-    <label for="notificationsToggle">Enable Notifications</label>
-  </div>
-</div>
-
-@if (showOperations) {
-<div class="operations-container">
-  <div>
-    <h3>Create Operation</h3>
-    <textarea
-      [(ngModel)]="newOperation"
-      placeholder="Enter operation JSON here"
-    ></textarea>
-    <br />
-    <button class="custom-button" (click)="sendOperation()">
-      Send Operation
-    </button>
-  </div>
-
-  <div>
-    <h3>Change Value</h3>
-    <textarea
-      [(ngModel)]="changeValueOperation"
-      placeholder="Enter change value JSON here"
-    ></textarea>
-    <br />
-    <button class="custom-button" (click)="changeValue()">Change Value</button>
-  </div>
-</div>
-} }
-
-<app-notification-dialog></app-notification-dialog>
-
-<div class="grid-container">
-  <ag-grid-angular
-    [rowData]="operations"
-    [rowSelection]="'single'"
-    [columnDefs]="columnDefs"
-    [defaultColDef]="defaultColDef"
-    (gridReady)="onGridReady($event)"
-    [getRowId]="getRowId"
-    [getRowStyle]="getRowStyle"
-    [rowStyle]="rowStyle"
-    [theme]="theme"
-  >
-  </ag-grid-angular>
-</div>
+<router-outlet></router-outlet>
